ejemplos/nginx/nginx-srv-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  namespace: default
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: nginx
